all functionality working logout btn, profile complete btn, verify email btn working and conditional rendering also working of all btns

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ src/components/login.js
 src/components/login.module.css
 src/components/signUp.js
 .gitignore
+src/components/updateProfile/updateProfile.js
+src/components/updateProfile/updateProfile.module.css
